test/Availability/spi-available-swift-module.code
// REQUIRES: OS=macosx
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

// RUN: %target-language-frontend -parse-as-library %t/Foo.code -emit-module -library-level api -emit-module-path %t/Foo.codemodule -module-name Foo
// RUN: %target-language-frontend-typecheck -parse-as-library %t/Client.code -verify -library-level api -I %t

//--- Foo.code

@_spi_available(macOS 10.10, *)
@available(iOS 8.0, *)
public class MacOSSPIClass {}

@_spi_available(iOS 8.0, *)
@available(macOS 10.10, *)
public class iOSSPIClass {}

//--- Client.code

import Foo

@available(macOS 10.10, iOS 8.0, *)
public struct Foo {
  public var macos: MacOSSPIClass // expected-error {{cannot use class 'MacOSSPIClass' here; it is an SPI imported from 'Foo'}}
  public var ios: iOSSPIClass
}
